Added open hours details.

--- a/src/main/resources/templates/view.html
+++ b/src/main/resources/templates/view.html
@@ -10,12 +10,12 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 
-<body>
+<div>
 
 <div class="title">
-    <span><a href="/">Back to Home page</a></span><br>
-    <span><a href="/login">Login</a></span><br>
-    <span><a href="/booking">Book a table</a></span><br>
+    <span><a href="/">Tillbaka till startsidan</a></span><br>
+    <span><a href="/login">Logga in</a></span><br>
+    <span><a href="/booking">Boka bord</a></span><br>
     <img src="../static/title.jpg" id="title" th:src="${'/title.jpg'}">
 </div>
 
@@ -63,6 +63,14 @@
     Onsdagar till lördagar serverar vi våra julbord.<br><br>Varmt välkomna hem till oss på Sankt Gertrud!</p>
     <p>Pris:<strong> 555 kr</strong> (inkl. moms)</p>
     <em>Varmt välkommen!</em>
+</div>
+
+<div class="openHours">
+    <h3>Öppettider</h3>
+        <p>Mondag - Fredag: 11:30-14:00</p>
+        <b>Startdatum: </b> 20 november 2019<br>
+        <b>Sista datum: </b> 21 december 2019<br>
+        <b>Hemsida: </b><a href="https://www.sanktgertrud.se/">www.sanktgertrud.se</a>
 </div>
 
 <div class="logo">
