ändrade färg på vissa länkar till blått

--- a/src/main/resources/static/indexPage.css
+++ b/src/main/resources/static/indexPage.css
@@ -109,6 +109,9 @@ a {
     color:#ffffff;
 }
 
+#links {
+    color:#0000EE;
+}
 .booking {
     font-family: "Questa Grande", "Palatino Linotype", serif;
     display:block;
