--- a/src/main/resources/templates/Booking.html
+++ b/src/main/resources/templates/Booking.html
@@ -10,11 +10,12 @@
 
 <body>
 <div class="booking">
-    <span><a href="/">Tillbaka till startdida</a></span>
+    <span><a href="/">Tillbaka till startsida</a></span>
      <center> <img src="../static/bokaBord.jpg" th:src="${'/bokaBord.jpg'}"></center></div>
 
+<br><br><br>
+<div class ="select">
     <center><form action="/booking" method="POST" th:object="${booking}">
-
 
         Personer: <select th:field="*{people}">
     <option value="1">1</option>
@@ -77,7 +78,7 @@
     <input type="submit" value="Boka"/> <br>
 
 </form>
-</center>
+</center></div>
 
 
 
