--- a/src/main/resources/static/indexPage.css
+++ b/src/main/resources/static/indexPage.css
@@ -51,14 +51,16 @@ img {
 }
 
 #checkboxes {
+ font-size:18px;
  font-weight:bold;
  color:#c21f1f;
 }
 
 
 .cardContainer {
-    width:49%;
+    width:48%;
     height:600px;
+    margin-left:10px;
     #position:relative;
     display:inline-block;
 }
@@ -67,7 +69,7 @@ img {
     border: 2px solid #039C31;
     width:49%;
     height:600px;
-    #position:relative:
+
     display:inline-block;
     float:right;
 }
@@ -76,7 +78,8 @@ img {
     border: 2px solid #039C31;
     width:200px;
     height:100px;
-    margin:20px;
+    margin-right:20px;
+    margin-top:20px;
     padding:20px;
     float:left;
 }
@@ -159,4 +162,7 @@ color:black;
 font-weight:bold;
 }
 
+#frontImage {
+position:relative;
+}
 
