tog bort understrykningar på länkar och flyttat länkarna på startsidan in ett steg, har även förstorat beskrivningen i add restaurang och lagt till tomtesymboler för tomteratingen i add restaurang

--- a/src/main/resources/templates/Booking.html
+++ b/src/main/resources/templates/Booking.html
@@ -10,7 +10,7 @@
 
 <body>
 <div class="booking">
-    <span><a href="/">Tillbaka till startsida</a></span>
+    &nbsp;<span><a href="/">Tillbaka till startsida</a></span>
      <center> <img src="../static/bokaBord.jpg" th:src="${'/bokaBord.jpg'}"></center></div>
 
 <br><br><br>
