--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -9,7 +9,7 @@
 <body>
 
     <div class="login">
-        <span><a href="/">Tillbaks till startsidan</a></span>
+        &nbsp;<span><a href="/">Tillbaks till startsidan</a></span>
         <center><h1 id="headerlogin"> Logga in</h1></center></div>
 
    <center><form action="/login" method="POST">
