--- a/src/main/resources/templates/view.html
+++ b/src/main/resources/templates/view.html
@@ -3,19 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../static/indexPage.css" th:href ="'/indexPage.css'">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <title>Restaurant details</title>
 </head>
+<STYLE>A {text-decoration: none;} </STYLE>
 <!-- Font Awesome Icon Library -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<script src="https://kit.fontawesome.com/a076d05399.js"></script>
+<body>
 
 <div>
 
 <div class="title">
-    <span><a href="/">Tillbaka till startsidan</a></span><br>
-    <span><a href="/login">Logga in</a></span><br>
-    <span><a href="/booking">Boka bord</a></span><br>
+    &nbsp;<span><a href="/">Tillbaka till startsidan</a></span><br>
+    &nbsp;<span><a href="/login">Logga in</a></span><br>
+    &nbsp;<span><a href="/booking">Boka bord</a></span><br>
     <img src="../static/title.jpg" id="title" th:src="${'/title.jpg'}">
 </div>
 
