--- a/src/main/resources/static/indexPage.css
+++ b/src/main/resources/static/indexPage.css
@@ -28,6 +28,7 @@ h2 {
 .title {
     width:100%;
     background-color: #c21f1f;
+    font-size: 20px;
 }
 
 img {
@@ -83,12 +84,14 @@ img {
 
 .login {
     display:block;
-    #width:100%;
     margin:auto;
     background-color: #c21f1f;
+    font-family: "Questa Grande", "Palatino Linotype", serif;
+    font-size: 20px;
 }
 
 #headerlogin {
+    font-family: "Questa Grande", "Palatino Linotype", serif;
     color:#ffffff;
 }
 
@@ -96,12 +99,14 @@ img {
 
 .addRestaurant {
         display:block;
-        #width:100%;
         margin:auto;
         background-color: #c21f1f;
+        font-family: "Questa Grande", "Palatino Linotype", serif;
+        font-size: 20px;
 }
 
 #headeraddrestaurant {
+    font-family: "Questa Grande", "Palatino Linotype", serif;
     color:#ffffff;
 }
 
@@ -113,16 +118,17 @@ a {
     color:#0000EE;
 }
 .booking {
-    font-family: "Questa Grande", "Palatino Linotype", serif;
     display:block;
-    #width:100%;
-    margin:auto;
-    background-color: #c21f1f;
+      margin:auto;
+      background-color: #c21f1f;
+      font-family: "Questa Grande", "Palatino Linotype", serif;
+      font-size: 20px;
 
 
 }
 
 #headerbooking {
+    font-family: "Questa Grande", "Palatino Linotype", serif;
     color:#ffffff;
 }
 
@@ -136,14 +142,14 @@ a {
 }
 
 .confirmation{
+   display:block;
+   margin:auto;
+   background-color: #c21f1f;
    font-family: "Questa Grande", "Palatino Linotype", serif;
-   font-size: 15px;
-     display:block;
-     #width:100%;
-     margin:auto;
-     background-color: #c21f1f;
+   font-size: 20px;
 }
 #headerbooking {
+    font-family: "Questa Grande", "Palatino Linotype", serif;
     color:#ffffff;
 }
 
@@ -174,3 +180,6 @@ font-weight:bold;
 
 
 
+#description {
+       height: 80px;
+}
