--- a/src/main/resources/templates/view.html
+++ b/src/main/resources/templates/view.html
@@ -38,6 +38,14 @@
     <img src="https://sanktgertrud.se/_files/200000384-afc99b0c46/450/6ce7ch.jpg">
 </div>
 
+<div class="openHours">
+    <h3>Öppettider</h3>
+    <p>Mondag - Fredag: 11:30-14:00</p>
+    <b>Startdatum: </b> 20 november 2019<br>
+    <b>Sista datum: </b> 21 december 2019<br>
+    <b>Hemsida: </b><a id="links" href="https://www.sanktgertrud.se/">www.sanktgertrud.se</a>
+</div>
+
 <!-- Preferences -->
 <br>
 <div class="preferences">
@@ -64,13 +72,7 @@
     <em>Varmt välkommen!</em>
 </div>
 
-<div class="openHours">
-    <h3>Öppettider</h3>
-        <p>Mondag - Fredag: 11:30-14:00</p>
-        <b>Startdatum: </b> 20 november 2019<br>
-        <b>Sista datum: </b> 21 december 2019<br>
-        <b>Hemsida: </b><a id="links" href="https://www.sanktgertrud.se/">www.sanktgertrud.se</a>
-</div>
+
 
 <div class="logo">
     <p><img src="https://julbordsguiden.se/images/2018_Julbord/Loggor/Sankt_Gertrud_logotyp.png" width="200" height="100" alt="Sankt Gertrud logotyp"></p>
@@ -90,7 +92,7 @@
   <label for="rating1">🎅</label>
 </span>
 
-
+<div class="mapContainer" id="googleMap"></div>
 
 </body>
 </html>
