--- a/src/main/resources/templates/view.html
+++ b/src/main/resources/templates/view.html
@@ -86,7 +86,7 @@
         <p>Mondag - Fredag: 11:30-14:00</p>
         <b>Startdatum: </b> 20 november 2019<br>
         <b>Sista datum: </b> 21 december 2019<br>
-        <b>Hemsida: </b><a id="links" href="https://www.sanktgertrud.se/">www.sanktgertrud.se</a>
+        <b>Hemsida: </b><a id="links2" href="https://www.sanktgertrud.se/">www.sanktgertrud.se</a>
 </div>
 
     <div class="logo">
