--- a/src/main/resources/templates/view.html
+++ b/src/main/resources/templates/view.html
@@ -29,7 +29,7 @@
 </div>
 
     <!--<h1>Sankt Gertrud</h1>-->
-    <h1 th:text ="${restaurant.name}" id="restName"></h1>
+    <center><h1 th:text ="${restaurant.name}" id="restName"></h1>
     <div class="rating">
         <span class="fa fa-star checked"></span>
         <span class="fa fa-star checked"></span>
@@ -40,11 +40,19 @@
     </div>
     <br>
     <div class="restaurant_address">Östergatan 7B,  211 25 Malmö</div>
-    <br>
+    <br></center>
 
 
     <div class="picture">
         <img src="https://sanktgertrud.se/_files/200000384-afc99b0c46/450/6ce7ch.jpg">
+    </div>
+    <div class="mapContainer" id="googleMap"></div>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBbJOvuSQIBXS0IpOR-y16oLoByabvW-_k&callback=myMap"></script>
+    <br><br>
+    <br><br>
+    <div class="preferences">
+        <i class="fas fa-baby-carriage"></i>
+        <i class="fas fa-wheelchair"></i>
     </div>
 
 <div class="openHours">
@@ -56,15 +64,12 @@
 </div>
 
 <!-- Preferences -->
-<br>
-<div class="preferences">
-    <i class="fas fa-baby-carriage"></i>
-    <i class="fas fa-wheelchair"></i>
-</div>
+
+
 
 
     <!--description th:text="${restaurant.description}"-->
-    <div class="description" >
+   <br><br><br> <div class="description" >
         <p><strong>På Sankt Gertrud serverar vi ett julbord som smakar precis lika bra för den klassiska
             julbordsfantasten som för den som hellre vill ha ett grönare julbord. Sillar med lök,
             senap och dill står bredvid de veganska sillalternativen. Laxar i alla smaker tillsammans med getostpatéer,
@@ -81,14 +86,8 @@
         <em>Varmt välkommen!</em>
     </div>
 
-<div class="openHours">
-    <h3>Öppettider</h3>
-        <p>Mondag - Fredag: 11:30-14:00</p>
-        <b>Startdatum: </b> 20 november 2019<br>
-        <b>Sista datum: </b> 21 december 2019<br>
-        <b>Hemsida: </b><a id="links2" href="https://www.sanktgertrud.se/">www.sanktgertrud.se</a>
-</div>
 
+<center>
     <div class="logo">
         <p><img src="https://julbordsguiden.se/images/2018_Julbord/Loggor/Sankt_Gertrud_logotyp.png" width="200" height="100" alt="Sankt Gertrud logotyp"></p>
     </div>
@@ -110,8 +109,7 @@
 </div>
 
 
-    <div class="mapContainer" id="googleMap"></div>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBbJOvuSQIBXS0IpOR-y16oLoByabvW-_k&callback=myMap"></script>
+
 
 </body>
 </html>
