fortsatt layout med viewer

--- a/src/main/resources/templates/view.html
+++ b/src/main/resources/templates/view.html
@@ -50,6 +50,8 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBbJOvuSQIBXS0IpOR-y16oLoByabvW-_k&callback=myMap"></script>
     <br><br>
     <br><br>
+    <br><br>
+    <br><br>
     <div class="preferences">
         <i class="fas fa-baby-carriage"></i>
         <i class="fas fa-wheelchair"></i>
@@ -69,7 +71,7 @@
 
 
     <!--description th:text="${restaurant.description}"-->
-   <br><br><br> <div class="description" >
+   <br><br><div class="description" >
         <p><strong>På Sankt Gertrud serverar vi ett julbord som smakar precis lika bra för den klassiska
             julbordsfantasten som för den som hellre vill ha ett grönare julbord. Sillar med lök,
             senap och dill står bredvid de veganska sillalternativen. Laxar i alla smaker tillsammans med getostpatéer,
