Bekräftelse på bokning fixat

--- a/src/main/resources/templates/Booking.html
+++ b/src/main/resources/templates/Booking.html
@@ -63,7 +63,7 @@
 <h2>Avsluta reservation</h2>
 
     Namn:<br>
-    <input id="namn" th:field="*{firstname}"type="Namn" placeholder="Namn (obligatoriskt)">
+    <input th:field="*{firstname}" type="text" placeholder="Namn (obligatoriskt)">
     <br>
     Efternamn:<br>
     <input id="efternamn" th:field="*{lastname}"type="tel" placeholder="Efternamn (obligatoriskt)">
