--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -46,7 +46,7 @@
 
     </select>
 
-    <button type="button" onclick="GetSelectedValue(); smoothScroll(document.getElementById('second'))">Get Selected Value</button>
+    <button type="button" onclick="GetSelectedValue(); smoothScroll(document.getElementById('second'))">Välj stadsdel</button>
 
 </form>
 
