Lagt till fält i bekräftelse

--- a/src/main/resources/templates/Confirmation.html
+++ b/src/main/resources/templates/Confirmation.html
@@ -23,6 +23,8 @@
         <span th:text="${'Du bokat bord den : ' + booking.day}" ></span> <br><br>
         <span th:text="${'Klockan: ' + booking.time}" ></span> <br><br>
 
+        <span th:text="${'Bekräftelse skickas till: ' + booking.email}" ></span> <br><br>
+
     </div>
 </center>
 
