--- a/src/main/resources/static/indexPage.css
+++ b/src/main/resources/static/indexPage.css
@@ -138,7 +138,8 @@ a {
 .preferences {
     font-size: 30px;
     color: #c21f1f;
-    float:left;
+    clear: both;
+
 }
 
 .checked {
@@ -159,10 +160,11 @@ a {
 }
 
 .description {
-    text-align: left;
+    position: static;
     font-family: Mongolian Baiti, Georgia, serif;
-    padding: 200px;
-    margin-left:20px;
+    clear: both;
+
+
 }
 
 .select{
@@ -184,10 +186,12 @@ font-weight:bold;
 
 .picture {
     float: left;
+    margin-right:20px;
+
 }
 
-.openHours {
-    padding-left: 1cm;
+.leftColumn {
+    width:49%;
     float: left;
 }
 
@@ -200,4 +204,6 @@ font-weight:bold;
 #frontImage {
 position:relative;
 }
+
+
 
