--- a/src/main/resources/templates/view.html
+++ b/src/main/resources/templates/view.html
@@ -68,12 +68,6 @@
         <em>Varmt välkommen!</em>
     </div>
 
-
-<center>
-    <div class="logo">
-        <p><img src="https://julbordsguiden.se/images/2018_Julbord/Loggor/Sankt_Gertrud_logotyp.png" width="200" height="100" alt="Sankt Gertrud logotyp"></p>
-    </div>
-
 <h3>Vad vill du ge denna restaurang för tomte-rating?</h3>
 <form class="starRating" action="/newRating/" method="post">
     <input type="hidden" th:value="${restaurant.id}" name="id">
@@ -86,10 +80,10 @@
   <input id="rating2" type="radio" name="rating" value="2">
   <label for="rating2">🎅🎅</label><br>
   <input id="rating1" type="radio" name="rating" value="1">
-  <label for="rating1">🎅</label><br>
+  <label for="rating1">🎅</label><br><br>
     <input type="submit" value="Klicka här">
 </form>
-
+<br><br>
 </div>
 
     <br><br>
