--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,7 +7,7 @@
 
 
 </head>
-<STYLE>A {text-decoration: none;} </STYLE>
+<STYLE> {text-decoration: none;} </STYLE>
 <body>
 
     <div class="login">
