--- a/src/main/resources/templates/view.html
+++ b/src/main/resources/templates/view.html
@@ -26,11 +26,10 @@
     <img src="../static/title.jpg" id="title" th:src="${'/title.jpg'}">
 </div>
 
-<<<<<<< HEAD
-<div class="leftColumn">
-    <h1 th:text ="${restaurant.name}" id="restName"></h1>
-=======
-    <!--<h1>Sankt Gertrud</h1>-->
+
+
+
+
     <div class="leftColumn">
 
         <h1 th:text ="${restaurant.name}" id="restName"></h1>
@@ -80,9 +79,10 @@
 </form>
 <br><br>
 </div>
-    <br><br>
+
     <div class="mapContainer" id="googleMap"></div>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBbJOvuSQIBXS0IpOR-y16oLoByabvW-_k&callback=myMap"></script>
 
+</div>
 </body>
 </html>
