--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -11,8 +11,10 @@
 <body>
 
     <div class="login">
-        &nbsp;<span><a href="/">Tillbaka till startsidan</a></span>
-        <center><h1 id="headerlogin"> Logga in</h1></center></div>
+        &nbsp;<span><a href="/">Tillbaka till startsidan</a></span><br>
+         <span><a href="/addMember">Bli medlem</a></span>
+        <center><h1 id="headerlogin"> Logga in</h1></center>
+    </div>
 
    <center><form action="/login" method="POST">
         <input type="text" name="username" placeholder="username"/>
