--- a/src/main/resources/static/indexPage.css
+++ b/src/main/resources/static/indexPage.css
@@ -1,21 +1,20 @@
 
-h1 {
-
-    font-family: "Questa Grande", "Palatino Linotype", serif;
-    font-size: 40px;
-    #text-align: center;
-
-    #display:block;
-    #background-color: #c21f1f;
-    color: black;
-    #padding: 15px;
-    #margin:0px;
-    }
-
 h2 {
     font-family: "Questa Grande", "Palatino Linotype", serif;
     font-size: 24px;
     font-weight:bold;
+}
+
+.title {
+    width:100%;
+    margin:auto;
+    background-color: #c21f1f;
+    font-size: 20px;
+}
+
+.title a {
+    color: #FFFFFF;
+    text-decoration: none;
 }
 
 #title {
@@ -25,11 +24,7 @@ h2 {
     background-color: #c21f1f;
 }
 
-.title {
-    width:100%;
-    background-color: #c21f1f;
-    font-size: 20px;
-}
+
 
 img {
     max-width:100%;
@@ -91,6 +86,12 @@ img {
     background-color: #c21f1f;
     font-family: "Questa Grande", "Palatino Linotype", serif;
     font-size: 20px;
+}
+
+.login a {
+    color: #FFFFFF;
+    text-decoration: none;
+    left: 10%;
 }
 
 #headerlogin {
