--- a/src/main/resources/templates/addMember.html
+++ b/src/main/resources/templates/addMember.html
@@ -8,10 +8,10 @@
 </head>
 <body>
 
-&nbsp;<div class="title">
-    &nbsp;<span th:if="${session.username == null}"><a href="/login">Logga in</a></span>
+<div class="title">
+    <span th:if="${session.username == null}"><a href="/login">Logga in</a></span>
     <span th:if="${session.username != null}"><a href="/logout">Logga ut</a></span>
-    <br><span th:if="${session.username != null}"><a href="/addRestaurant">&nbsp;&nbsp;Lägg till restaurang</a></span>
+    <br><span th:if="${session.username != null}"><a href="/addRestaurant">Lägg till restaurang</a></span>
     <img src="../static/blimedlem.jpg" id="title" th:src="${'/blimedlem.jpg'}">
 </div>
 
