--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -21,7 +21,8 @@
 <div class="title">
     &nbsp;<span th:if="${session.username == null}"><a href="/login">Logga in</a></span>
     <span th:if="${session.username != null}"><a href="/logout">Logga ut</a></span>
-    <br><span th:if="${session.username != null}"><a href="/addRestaurant">&nbsp;&nbsp;Lägg till restaurang</a></span>
+    <br><span th:if="${session.username != null}"><a href="/addRestaurant">Lägg till restaurang</a></span>
+    <br><span th:if="${session.username != null}"><a th:href="'/myBookings/' + ${session.username}">Mina bokningar</a></span>
     <img src="../static/title.jpg" id="title" th:src="${'/title.jpg'}">
 </div>
 
