Changed Style.css for each page

--- a/src/main/resources/static/indexPage.css
+++ b/src/main/resources/static/indexPage.css
@@ -7,7 +7,7 @@ h2 {
 
 .title {
     width:100%;
-    margin:auto;
+    margin: auto;
     background-color: #c21f1f;
     font-size: 20px;
 }
@@ -15,7 +15,10 @@ h2 {
 .title a {
     color: #FFFFFF;
     text-decoration: none;
+    margin-left: 5px;
 }
+
+
 
 #title {
     display:block;
@@ -91,6 +94,7 @@ img {
 .login a {
     color: #FFFFFF;
     text-decoration: none;
+    margin-left: 5px;
 }
 
 #headerlogin {
@@ -106,6 +110,12 @@ img {
         background-color: #c21f1f;
         font-family: "Questa Grande", "Palatino Linotype", serif;
         font-size: 20px;
+}
+
+.addRestaurant {
+    color: #FFFFFF;
+    text-decoration: none;
+    margin-left: 5px;
 }
 
 #headeraddrestaurant {
@@ -126,8 +136,12 @@ a {
       background-color: #c21f1f;
       font-family: "Questa Grande", "Palatino Linotype", serif;
       font-size: 20px;
+}
 
-
+.booking a {
+    margin-left: 5px;
+    text-decoration: none;
+    color: #FFFFFF;
 }
 
 #headerbooking {
@@ -153,6 +167,12 @@ a {
      #width:100%;
      margin:auto;
      background-color: #c21f1f;
+}
+
+.confirmation a {
+    color: #FFFFFF;
+    text-decoration: none;
+    margin-left: 5px;
 }
 #headerbooking {
     font-family: "Questa Grande", "Palatino Linotype", serif;
@@ -206,6 +226,6 @@ position:relative;
 }
 
 .memberForm {
-margin-left:40%
+margin-left:44%
 }
 
