--- a/src/main/resources/templates/Booking.html
+++ b/src/main/resources/templates/Booking.html
@@ -8,11 +8,10 @@
 
 </head>
 
-<STYLE>A {text-decoration: none;} </STYLE>
 
 <body>
 <div class="booking">
-    &nbsp;<span><a href="/">Tillbaka till startsida</a></span>
+     <span><a href="/">Tillbaka till startsida</a></span>
      <center> <img src="../static/bokaBord.jpg" th:src="${'/bokaBord.jpg'}"></center></div>
 
 <br><br><br>
