--- a/src/main/resources/templates/Confirmation.html
+++ b/src/main/resources/templates/Confirmation.html
@@ -8,11 +8,9 @@
 
 </head>
 
-<STYLE>A {text-decoration: none;} </STYLE>
-
 <body>
 <div class="confirmation">
-    &nbsp;<span><a href="/">Tillbaka till startsida</a></span>
+    <span><a href="/">Tillbaka till startsida</a></span>
     <center> <img src="../static/bekraftelse.jpg" th:src="${'/bekraftelse.jpg'}"></center></div>
 
 <center>
