--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,11 +7,11 @@
 
 
 </head>
-<STYLE> {text-decoration: none;} </STYLE>
+
 <body>
 
     <div class="login">
-        &nbsp;<span><a href="/">Tillbaka till startsidan</a></span><br>
+         <span><a href="/">Tillbaka till startsidan</a></span><br>
          <span><a href="/addMember">Bli medlem</a></span>
         <center><h1 id="headerlogin"> Logga in</h1></center>
     </div>
