--- a/src/main/resources/templates/myBookings.html
+++ b/src/main/resources/templates/myBookings.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="../static/indexPage.css" th:href="'/indexPage.css'">
     <title>MyBookings</title>
 </head>
+<STYLE>A {text-decoration: none;} </STYLE>
 <body>
+<div class="confirmation">
+    &nbsp;<span><a href="/">Tillbaka till startsida</a></span>
+    <center><img src="../static/bekraftelse.jpg" th:src="${'/bekraftelse.jpg'}"></center>
+</div>
+
 
 </body>
 </html>
